tests/sksl/errors/UnscopedVariableInDoWhile.glsl
### Compilation failed:

error: 3: variable 'foo' must be created in a scope
1 error
